--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "connect-busboy": "0.0.2",
+    "cors": "^2.7.1",
     "express": "^4.14.0",
     "multer": "^1.2.0",
     "view-and-data": "^2.0.1"
